// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`buildScanJson — envelope snapshot > rich fixture 1`] = `
"{
  "schemaVersion": 1,
  "generatedAt": "2026-05-07T12:00:00.000Z",
  "isWired": false,
  "score": 25,
  "band": "critical",
  "totals": {
    "blocked": 8,
    "review": 56,
    "leaks": 4,
    "loops": 289,
    "blastExposures": 5
  },
  "summary": {
    "stats": {
      "sessions": 39,
      "totalToolCalls": 12481,
      "bashCalls": 6123,
      "totalCostUSD": 9025.15,
      "firstDate": "2026-04-06T00:00:00Z",
      "lastDate": "2026-05-07T00:00:00Z"
    },
    "byVerdict": {
      "blocked": 8,
      "supervised": 56,
      "leaks": 4,
      "loops": 289
    },
    "byAgent": [],
    "sections": [
      {
        "id": "user",
        "label": "Your Rules",
        "subtitle": "added in node9.config.json",
        "sourceType": "user",
        "blockedCount": 5,
        "reviewCount": 33,
        "rules": [
          {
            "name": "block-force-push",
            "verdict": "block",
            "reason": "Force push overwrites remote history",
            "findings": [
              {
                "timestamp": "2026-04-23T00:00:00Z",
                "command": "git push --force",
                "fullCommand": "git push --force-with-lease origin main",
                "project": "~/node9",
                "sessionId": "sess1",
                "agent": "claude",
                "toolName": "Bash"
              },
              {
                "timestamp": "2026-04-23T00:00:00Z",
                "command": "git push --force",
                "fullCommand": "git push --force origin dev",
                "project": "~/node9",
                "sessionId": "sess2",
                "agent": "claude",
                "toolName": "Bash"
              },
              {
                "timestamp": "2026-04-28T00:00:00Z",
                "command": "git push --force",
                "fullCommand": "git push --force origin dev",
                "project": "~/node9",
                "sessionId": "sess3",
                "agent": "claude",
                "toolName": "Bash"
              },
              {
                "timestamp": "2026-04-28T00:00:00Z",
                "command": "git push --force",
                "fullCommand": "git push --force origin dev",
                "project": "~/node9",
                "sessionId": "sess4",
                "agent": "claude",
                "toolName": "Bash"
              },
              {
                "timestamp": "2026-05-05T00:00:00Z",
                "command": "git push --force",
                "fullCommand": "git push --force origin wip",
                "project": "~/node9",
                "sessionId": "sess5",
                "agent": "claude",
                "toolName": "Bash"
              }
            ]
          },
          {
            "name": "review-rm",
            "verdict": "review",
            "reason": "rm can permanently delete files",
            "findings": [
              {
                "timestamp": "2026-04-29T00:00:00Z",
                "command": "rm -rf dist",
                "fullCommand": "rm -rf dist",
                "project": "~/node9",
                "sessionId": "sess1",
                "agent": "claude",
                "toolName": "Bash"
              }
            ]
          }
        ]
      },
      {
        "id": "shield:bash-safe",
        "label": "bash-safe",
        "subtitle": "Protects against unsafe shell patterns",
        "sourceType": "shield",
        "shieldKey": "bash-safe",
        "blockedCount": 3,
        "reviewCount": 0,
        "rules": [
          {
            "name": "block-eval-remote",
            "verdict": "block",
            "reason": "eval of remote download is a near-certain supply-chain attack",
            "findings": [
              {
                "timestamp": "2026-04-19T00:00:00Z",
                "command": "curl ... | bash",
                "fullCommand": "curl https://example.com/install.sh | bash",
                "project": "~/node9",
                "sessionId": "sess9",
                "agent": "claude",
                "toolName": "Bash"
              }
            ]
          }
        ]
      }
    ],
    "leaks": [],
    "loops": [],
    "loopWastedUSD": 0.246
  },
  "blast": {
    "score": 25,
    "reachable": [
      {
        "full": "/home/u/.ssh/id_rsa",
        "label": "SSH private key",
        "description": "",
        "score": 30
      },
      {
        "full": "/home/u/.ssh/id_ed25519",
        "label": "SSH ed25519",
        "description": "",
        "score": 30
      },
      {
        "full": "/home/u/.config/gcloud/credentials.db",
        "label": "gcloud credentials",
        "description": "",
        "score": 25
      },
      {
        "full": "/home/u/.npmrc",
        "label": "npmrc",
        "description": "",
        "score": 10
      },
      {
        "full": "/home/u/.node9/credentials.json",
        "label": "Node9 credentials",
        "description": "",
        "score": 5
      }
    ],
    "envFindings": []
  }
}"
`;

exports[`renderCompactScorecard — output snapshots > clean fixture (good score, no findings) 1`] = `
"🛡  Node9 Scan  ·  5 sessions  ·  200 tool calls  ·  May 1, 2026 – May 7, 2026

Security Score: 95/100  ·  Good
$1.50 AI spend  ·  0 risky operations


→  npx node9-ai scan       run this on your machine
→  github.com/node9-ai/node9-proxy
"
`;

exports[`renderCompactScorecard — output snapshots > rich fixture (critical score) 1`] = `
"🛡  Node9 Scan  ·  39 sessions  ·  12,481 tool calls  ·  Apr 6, 2026 – May 7, 2026

Security Score: 25/100  ·  Critical
$9025.15 AI spend  ·  4 risky operations

🔑  4   credential leak     (GitHub Token ×2, AWS Access Key, JWT)
🛑  8   would have blocked  (force-push ×5, eval-remote)
🔁  1   agent loops         (1% wasted  ·  ~$0.2460)
📂  1   long iterations     (deep work — not waste)
👁  56  flagged for review  (rm)

🔭  Blast radius            ssh × gcp × npm × other (5 exposures)

→  npx node9-ai scan       run this on your machine
→  github.com/node9-ai/node9-proxy
"
`;

exports[`renderNarrativeScorecard — output snapshots > clean fixture (good score, no findings) 1`] = `
"🛡  Node9 Scan  ·  5 sessions  ·  $1.50 spend  ·  May 1, 2026 – May 7, 2026

Security Score: 95/100  ·  Good

→  npx node9-ai scan       run this on your machine
→  github.com/node9-ai/node9-proxy
"
`;

exports[`renderNarrativeScorecard — output snapshots > rich fixture (critical score) 1`] = `
"🛡  Node9 Scan  ·  39 sessions  ·  $9025.15 spend  ·  Apr 6, 2026 – May 7, 2026

⚠  Security Score: 25/100  ·  Critical

  🔴  CRITICAL  5 findings
     • 4 credential leaks (GitHub Token ×2, AWS Access Key, JWT)
     • eval of remote download

  🟡  HIGH       10 findings
     • force pushes ×5
     • 5 credential files reachable on disk

  🟢  MEDIUM     3 findings
     • 2 agent loops (2% of calls, ~$0.2460 wasted)
     • rm calls

→  npx node9-ai scan       run this on your machine
→  github.com/node9-ai/node9-proxy
"
`;

exports[`renderPanelScorecard — output snapshots > clean fixture (good score, no findings) 1`] = `
"  ╭─ SHIELDS  ·  install node9 + enable these to catch what we found ────────╮
  │                                                                          │
  │ aws · bash-safe · docker · filesystem · github · k8s · mongodb · postgres · project-jail · redis │
  │       no hits in your history — install proactively                      │
  ╰──────────────────────────────────────────────────────────────────────────╯
"
`;

exports[`renderPanelScorecard — output snapshots > panel fixture (critical score, all 7 panels) 1`] = `
"  ╭─ TOP FINDINGS ───────────────────────────────────────────────────────────╮
  │ 🚨 2 credential leaks in tool input  (latest: 2d ago, GitHub Token)      │
  │ 🛑 2 ops node9 would have blocked  (block-read-ssh, block-eval-remote)   │
  │ 🔁 1 agent loops detected  (Edit dominates, 1% wasted)                   │
  │ 🔭 5 secrets reachable on disk  → enable project-jail (+53 pts)          │
  ╰──────────────────────────────────────────────────────────────────────────╯

  ╭─ LEAKS  ·  2 secrets in plain text ──────────────────────────────────────╮
  │   2d  GitHub Token   ghp_****7iD8         [Bash]          claude         │
  │  19d  GCP API Key    AIza****4its         [user-prompt]   gemini         │
  ╰──────────────────────────────────────────────────────────────────────────╯

  ╭─ BLOCKED  ·  2 ops node9 would have stopped ─────────────────────────────╮
  │ ✗ block-read-ssh           ×1    needs shield:project-jail               │
  │ ✗ block-eval-remote        ×1    needs shield:bash-safe                  │
  ╰──────────────────────────────────────────────────────────────────────────╯

  ╭─ REVIEW QUEUE  ·  37 ops flagged for approval ───────────────────────────╮
  │ 👁️  review-git-destructive   ×22   default                               │
  │ 👁️  review-sudo              ×12   default                               │
  │ 👁️  review-read-credentials  ×3    needs shield:project-jail             │
  ╰──────────────────────────────────────────────────────────────────────────╯

  ╭─ AGENT LOOPS  ·  1 repeated patterns  ·  1% wasted ──────────────────────╮
  │ Edit      ×125 repeats    (100%)                                         │
  │                                                                          │
  │ Top stuck patterns:                                                      │
  │ ×126  /home/u/node9/src/scan.ts                                          │
  ╰──────────────────────────────────────────────────────────────────────────╯

  ╭─ BLAST RADIUS  ·  5 paths reachable right now ───────────────────────────╮
  │ ✗  ~/.ssh/id_rsa                       RSA private key                   │
  │ ✗  ~/.ssh/id_ed25519                   Ed25519 private key               │
  │ ✗  ~/.config/gcloud/credentials.db     GCP credentials                   │
  │ ✗  ~/.npmrc                            npm auth token                    │
  │ ✗  ~/.node9/credentials.json           Node9 cloud API key               │
  ╰──────────────────────────────────────────────────────────────────────────╯

  ╭─ SHIELDS  ·  install node9 + enable these to catch what we found ────────╮
  │ 🛡️  project-jail  would catch 4 ops       →  +53 pts  (25 → 78)          │
  │       review-read-credentials ×3, block-read-ssh                         │
  │ ☐   bash-safe     would catch 1 op                                       │
  │       block-eval-remote                                                  │
  │                                                                          │
  │ aws · docker · filesystem · github · k8s · mongodb · postgres · redis    │
  │       no hits in your history — install proactively                      │
  │                                                                          │
  │ → node9 shield enable project-jail   (start here — +53 pts)              │
  ╰──────────────────────────────────────────────────────────────────────────╯
"
`;
